--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.4.3",
     "fuse.js": "^7.1.0",
-    "next": "^15.1.7",
+    "next": "^15.1.11",
     "next-mdx-remote": "^5.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -31,7 +31,7 @@
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.1.7",
+    "eslint-config-next": "^15.1.11",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
